frontend/test/should_fail/newAttributeInitializer.grg
#using "new.gm"

rule r
{
	if{ new Barfuss@(j=42) != null; }

	modify {
	---
		def ref bf:Barfuss = new Barfuss@(j=42);
	}
}